--- a/funkopop.html
+++ b/funkopop.html
@@ -30,123 +30,91 @@
         <div class="row mt-4">
 
             <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="Imagens/Funko Pop Dale.webp" class="card-img-top" alt="Camiseta 1">
-                    <div class="card-body">
+                <div class="card h-100 shadow-sm">
+                    <img src="Imagens/Funko Pop Dale.webp" class="card-img-top" alt="funko pop Dale" title="Funko Pop Dale">
+                    <div class="card-body text-center">
                         <h5 class="card-title">Funko Pop Dale</h5>
-                        <p class="card-text">69,90</p>
-                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('funko pop Dale', 69.90)"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>Comprar</a>
+                        <p class="card-text text-muted">$69,90</p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('funko pop Dale', 69.90)">
+                            <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card">
+                <div class="card h-100 shadow-sm">
                     <img src="Imagens/Funko Pop Envy.webp" class="card-img-top" alt="Camiseta 2">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">Funko Pop Envy</h5>
-                        <p class="card-text">69,90</p>
-                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('funko pop Envy', 69.90)"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>Comprar</a>
+                        <p class="card-text text-muted">69,90</p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('funko pop Envy', 69.90)">
+                            <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card">
+                <div class="card h-100 shadow-sm">
                     <img src="Imagens/Funko Pop Garfield.webp" class="card-img-top" alt="Camiseta 3">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">Funko Pop Garfield</h5>
-                        <p class="card-text">69,90</p>
-                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('funko pop Garfield', 69.90)"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>Comprar</a>
+                        <p class="card-text text-muted">69,90</p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('funko pop Garfield', 69.90)">
+                            <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card">
+                <div class="card h-100 shadow-sm">
                     <img src="Imagens/Funko Pop Jaq & Gus gus.webp" class="card-img-top" alt="Camiseta 4">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">Funko Pop Jaq & Gus Gus</h5>
-                        <p class="card-text">69,90</p>
-                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('funko pop Jaq & Gus Gus', 69.90)"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>Comprar</a>
+                        <p class="card-text text-muted">69,90</p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('funko pop Jaq & Gus Gus', 69.90)">
+                            <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card">
+                <div class="card h-100 shadow-sm">
                     <img src="Imagens/Funko Pop Michael Jackson.webp" class="card-img-top" alt="Camiseta 5">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">Funko Pop Michael Jackson</h5>
-                        <p class="card-text">69,90</p>
+                        <p class="card-text text-muted">69,90</p>
                         <a class="btn btn-primary"
-                            onclick="adicionarAoCarrinho('funko pop Micahel jackson', 69.90)"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>Comprar</a>
+                            onclick="adicionarAoCarrinho('funko pop Micahel jackson', 69.90)">
+                            <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card">
+                <div class="card h-100 shadow-sm">
                     <img src="Imagens/Funko Pop Pink Panther.webp" class="card-img-top" alt="Camiseta 6">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">Funko Pop Pink Panther</h5>
-                        <p class="card-text">69,90</p>
-                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('funko pop Pink Panther', 69.90)"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>Comprar</a>
+                        <p class="card-text text-muted">69,90</p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('funko pop Pink Panther', 69.90)">
+                            <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card">
+                <div class="card h-100 shadow-sm">
                     <img src="Imagens/Funko Pop Sherk.webp" class="card-img-top" alt="Camiseta 7">
-                    <div class="card-body">
-                        <h5 class="card-title">Funko Pop Sherk</h5>
+                    <div class="card-body text-center">
+                        <h5 class="card-title text-muted">Funko Pop Sherk</h5>
                         <p class="card-text">69,90</p>
-                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('funko pop Sherk', 69.90)"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>Comprar</a>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('funko pop Sherk', 69.90)">
+                            <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card">
+                <div class="card h-100 shadow-sm">
                     <img src="Imagens/Funko Pop Stitch.webp" class="card-img-top" alt="Camiseta 8">
-                    <div class="card-body">
-                        <h5 class="card-title">Funko Pop Stitch</h5>
+                    <div class="card-body text-center">
+                        <h5 class="card-title text-muted">Funko Pop Stitch</h5>
                         <p class="card-text">69,90</p>
-                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('funko pop Stitch', 69.90)"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>Comprar</a>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('funko pop Stitch', 69.90)">
+                            <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
             </div>
@@ -185,26 +153,12 @@
     new window.VLibras.Widget('https://vlibras.gov.br/app');
   </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>  
-<footer class="footer text-center">
-    <div class="container">
-        <h5>GeekStore</h5>
-        <p>&copy; 2025 GeekStore. Todos os direitos reservados.</p>
-        <p><a href="index.html">Home</a> | <a href="parcerias.html">Parcerias</a> | <a
-                href="camisetas.html">Camisetas</a> | <a href="gamers.html">Gamers</a> | <a
-                href="acessorios.html">Acessórios</a></p>
-        <p>Desenvolvido por Lucas</p>
-    </div>
-    </div>
-    <div class="container mt-2 pt-22">
-        <p text-muted>Siga-nos nas redes sociais</p>
-        <div class="social-icons">
-            <a href="https://www.instagram.com/lucaaasx._.b/" class="btn btn-secondary"><i
-                    class="bi bi-instagram"></i></a>
-            <a href="https://twitter.com/" class="btn btn-secondary"><i class="bi bi-twitter"></i></a>
-            <a href="https://www.youtube.com/" class="btn btn-secondary"><i class="bi bi-youtube"></i></a>
-            <a href="https://www.tiktok.com/" class="btn btn-secondary"><i class="bi bi-tiktok"></i></a>
-        </div>
-    </div>
-</footer>
+<div id="footer"></div> 
+  <script>
+    fetch('footer.html')
+      .then(response => response.text())
+      .then(data => document.getElementById('footer').innerHTML = data)
+      .catch(error => console.error('Erro ao carregar o rodapé:', error));
+  </script>
 </body>
 </html>
