--- a/gamers.html
+++ b/gamers.html
@@ -29,118 +29,94 @@
         <div class="row mt-4">
 
             <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="Imagens/notebook gamer.webp" class="card-img-top" alt="Gamers 1">
-                    <div class="card-body">
+                <div class="card h-100 shadow-sm">
+                    <img src="Imagens/notebook gamer.webp" class="card-img-top" alt="Gamers 1" title="notebook gamer">
+                    <div class="card-body text-center">
                         <h5 class="card-title">notebook gamer </h5>
                         <p class="card-text">Notebook Gamer Acer Nitro V15 Intel </p>
-                        <p class="card-text"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>4.219,90</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <p class="card-text text-muted">$4.219,90</p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('notebook gamer', 4.219,90)">
+                            <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card">
+                <div class="card h-100 shadow-sm">
                     <img src="Imagens/xbox series s.webp" class="card-img-top" alt="Gamers 2">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">xbox series s</h5>
                         <p class="card-text">Console Xbox Series S 512GB</p>
-                        <p class="card-text">2.499,99</p>
-                        <a href="#" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16"
-                                height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>Comprar</a>
+                        <p class="card-text text-muted">$2.499,99</p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('xbox series s', 2.499,99)">
+                            <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="Imagens/Computador pc gamer.webp" class="card-img-top" alt="Gamers 3">
-                    <div class="card-body">
+                <div class="card h-100 shadow-sm">
+                    <img src="Imagens/Computador pc gamer.webp" class="card-img-top" alt="Gamers 3" title="Computador pc gamer">
+                    <div class="card-body text-center">
                         <h5 class="card-title">Computador pc gamer</h5>
                         <p class="card-text">Computador Gamer Completo 16Gb Ram / Ssd 480Gb</p>
-                        <p class="card-text">2.099,49</p>
-                        <a href="#" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16"
-                                height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>>Comprar</a>
+                        <p class="card-text text-muted">$2.099,49</p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('Computador pc gamer', 2.099,49)">
+                            <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="Imagens/" class="card-img-top" alt="Gamers 4">
-                    <div class="card-body">
-                        <h5 class="card-title">#</h5>
-                        <p class="card-text">#</p>
-                        <a href="#" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16"
-                                height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>Comprar</a>
+                <div class="card h-100 shadow-sm">
+                    <img src="Imagens/Water Cooler Gamdias.webp" class="card-img-top" alt="Water Cooler Gamdias" title="Water Cooler Gamdias">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Water Cooler Gamdias</h5>
+                        <p class="card-text text-muted">$337,37</p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('Water Cooler Gamdias', 337,37)">
+                            <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="Imagens/" class="card-img-top" alt="Gamers 5">
-                    <div class="card-body">
+                <div class="card h-100 shadow-sm">
+                    <img src="Imagens/" class="card-img-top" alt="Gamers 5" title="Gamers 5">
+                    <div class="card-body text-center">
                         <h5 class="card-title">#</h5>
-                        <p class="card-text">#</p>
-                        <a href="#" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16"
-                                height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>Comprar</a>
+                        <p class="card-text text-muted">#</p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('#', #.#)">
+                            <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="Imagens/" class="card-img-top" alt="Gamers 6">
-                    <div class="card-body">
+                <div class="card h-100 shadow-sm">
+                    <img src="Imagens/" class="card-img-top" alt="Gamers 6" title="Gamers 6">
+                    <div class="card-body text-center">
                         <h5 class="card-title">#</h5>
-                        <p class="card-text">#</p>
-                        <a href="#" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16"
-                                height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>Comprar</a>
+                        <p class="card-text text-muted">#</p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('#', #.#)">
+                            <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="Imagens/" class="card-img-top" alt="Gamers 7">
-                    <div class="card-body">
+                <div class="card h-100 shadow-sm">
+                    <img src="Imagens/" class="card-img-top" alt="Gamers 7" title="Gamers 7">
+                    <div class="card-body text-center">
                         <h5 class="card-title">#</h5>
-                        <p class="card-text">#</p>
-                        <a href="#" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16"
-                                height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>Comprar</a>
+                        <p class="card-text text-muted">#</p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('#', #.#)">
+                            <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="Imagens/" class="card-img-top" alt="Gamers 8">
-                    <div class="card-body">
+                <div class="card h-100 shadow-sm">
+                    <img src="Imagens/" class="card-img-top" alt="Gamers 8" title="Gamers 8">
+                    <div class="card-body text-center">
                         <h5 class="card-title">#</h5>
-                        <p class="card-text">#</p>
-                        <a href="#" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16"
-                                height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>Comprar</a>
+                        <p class="card-text text-muted">#</p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('#', #.#)">
+                            <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
             </div>
@@ -178,27 +154,13 @@
         new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
-    <footer class="footer text-center">
-        <div class="container">
-            <h5>GeekStore</h5>
-            <p>&copy; 2025 GeekStore. Todos os direitos reservados.</p>
-            <p><a href="index.html">Home</a> | <a href="parcerias.html">Parcerias</a> | <a
-                    href="camisetas.html">Camisetas</a> | <a href="gamers.html">Gamers</a> | <a
-                    href="acessorios.html">Acessórios</a></p>
-            <p>Desenvolvido por Lucas</p>
-        </div>
-        </div>
-        <div class="container mt-2 pt-22">
-            <p text-muted>Siga-nos nas redes sociais</p>
-            <div class="social-icons">
-                <a href="https://www.instagram.com/lucaaasx._.b/" class="btn btn-secondary"><i
-                        class="bi bi-instagram"></i></a>
-                <a href="https://twitter.com/" class="btn btn-secondary"><i class="bi bi-twitter"></i></a>
-                <a href="https://www.youtube.com/" class="btn btn-secondary"><i class="bi bi-youtube"></i></a>
-                <a href="https://www.tiktok.com/" class="btn btn-secondary"><i class="bi bi-tiktok"></i></a>
-            </div>
-        </div>
-    </footer>
+       <div id="footer"></div> 
+       <script>
+         fetch('footer.html')
+           .then(response => response.text())
+           .then(data => document.getElementById('footer').innerHTML = data)
+           .catch(error => console.error('Erro ao carregar o rodapé:', error));
+       </script>
 </body>
  <!-- Toast para feedback de adição ao carrinho -->
  <div class="toast-container position-fixed bottom-0 end-0 p-3">
