--- a/menu.html
+++ b/menu.html
@@ -48,11 +48,10 @@
 
             <!-- Ícones de carrinho e login -->
             <div class="d-flex">
-                <a href="login_cadastro.html" class="btn btn-outline-secondary">
+                <a href="login_cadastro.html" class="btn btn-outline-secondary" style="margin-left: 50px;">
                     <i class="bi bi-person"></i>
                 </a>
             </div>
-
         </div>
     </div>
 </nav>
