--- a/parcerias.html
+++ b/parcerias.html
@@ -129,7 +129,7 @@
     </section>
   </main>
 
-  <!-- Adicione isso antes da tag </body> -->
+  <!-- Adicione isso antes da tag  < / body> -->
    <div vw class="enabled">
     <div vw-access-button class="active"></div>
     <div vw-plugin-wrapper>
@@ -140,6 +140,7 @@
   <script>
     new window.VLibras.Widget('https://vlibras.gov.br/app');
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script> 
 
 
   <footer class="footer text-center">
