--- a/acessorios.html
+++ b/acessorios.html
@@ -150,6 +150,7 @@
             </div>
         </div>
     </div>
+    
     <!-- Script para adicionar produto ao carrinho -->
     <script>
         function adicionarAoCarrinho(nome, preco) {
@@ -182,27 +183,15 @@
         new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
-    <footer class="footer text-center">
-        <div class="container">
-            <h5>GeekStore</h5>
-            <p>&copy; 2025 GeekStore. Todos os direitos reservados.</p>
-            <p><a href="index.html">Home</a> | <a href="parcerias.html">Parcerias</a> | <a
-                    href="camisetas.html">Camisetas</a> | <a href="gamers.html">Gamers</a> | <a
-                    href="acessorios.html">Acessórios</a></p>
-            <p>Desenvolvido por Lucas</p>
-        </div>
-        </div>
-        <div class="container mt-2 pt-22">
-            <p text-muted>Siga-nos nas redes sociais</p>
-            <div class="social-icons">
-                <a href="https://www.instagram.com/lucaaasx._.b/" class="btn btn-secondary"><i
-                        class="bi bi-instagram"></i></a>
-                <a href="https://twitter.com/" class="btn btn-secondary"><i class="bi bi-twitter"></i></a>
-                <a href="https://www.youtube.com/" class="btn btn-secondary"><i class="bi bi-youtube"></i></a>
-                <a href="https://www.tiktok.com/" class="btn btn-secondary"><i class="bi bi-tiktok"></i></a>
-            </div>
-        </div>
-    </footer>
+    <script>
+  
+        fetch('footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer').innerHTML = data;
+            })
+            .catch(error => console.error('Erro ao carregar o rodapé:', error));
+    </script>
 </body>
  <!-- Toast para feedback de adição ao carrinho -->
  <div class="toast-container position-fixed bottom-0 end-0 p-3">
