--- a/carrinho.html
+++ b/carrinho.html
@@ -35,7 +35,8 @@
 
 <body>
 
-    <div class="container py-5">
+    <div class="container mt-5 pt-5">
+        <h1 class="text-center mb-4">🛒 Carrinho de Compras</h1>
         <div class="row g-4">
             <div id="menu"></div>
             <script>
@@ -234,30 +235,13 @@
     new window.VLibras.Widget('https://vlibras.gov.br/app');
   </script>
   
-
+  <div id="footer"></div> 
+  <script>
+    fetch('footer.html')
+      .then(response => response.text())
+      .then(data => document.getElementById('footer').innerHTML = data)
+      .catch(error => console.error('Erro ao carregar o rodapé:', error));
+  </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-<footer class="footer text-center">
-    <div class="container">
-        <h5>GeekStore</h5>
-        <p>&copy; 2023 GeekStore. Todos os direitos reservados.</p>
-        <p><a href="index.html">Home</a> | <a href="parcerias.html">Parcerias</a> | <a
-                href="camisetas.html">Camisetas</a> | <a href="gamers.html">Gamers</a> | <a
-                href="acessorios.html">Acessórios</a></p>
-        <p>Desenvolvido por Lucas</p>
-    </div>
-    </div>
-    <div class="container mt-2 pt-22">
-        <p text-muted>Siga-nos nas redes sociais</p>
-        <div class="social-icons">
-            <a href="https://www.instagram.com/lucaaasx._.b/" class="btn btn-secondary"><i
-                    class="bi bi-instagram"></i></a>
-            <a href="https://twitter.com/" class="btn btn-secondary"><i class="bi bi-twitter"></i></a>
-            <a href="https://www.youtube.com/" class="btn btn-secondary"><i class="bi bi-youtube"></i></a>
-            <a href="https://www.tiktok.com/" class="btn btn-secondary"><i class="bi bi-tiktok"></i></a>
-        </div>
-    </div>
-   
-</footer>
-
 </html>
