--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
     }, 5000);
   </script>
 
+
   <main class="container mt-5 pt-4">
     <div id="carouselExampleInterval" class="carousel slide mb-5" data-bs-ride="carousel" aria-label="Galeria de imagens">
       <div class="carousel-inner rounded shadow-sm">
         <div class="carousel-item active" data-bs-interval="10000">
-          <img src="Imagens/carrosel 1.webp" class="d-block w-100" alt="Slide 1 - Produtos Geek" />
+          <img src="Imagens/carrosel 1.gif" class="d-block w-100" alt="Slide 1 - Produtos Geek" />
         </div>
         <div class="carousel-item" data-bs-interval="2000">
           <img src="Imagens/carrosel 2.webp" class="d-block w-100" alt="Slide 2 - Produtos Geek" />
@@ -97,7 +98,6 @@
       </div>
     </div>
   </main>
-
   <div vw class="enabled">
     <div vw-access-button class="active"></div>
     <div vw-plugin-wrapper>
@@ -111,27 +111,13 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 
-  <footer class="footer text-center">
-    <div class="container">
-      <h5 class="mb-3">GeekStore</h5>
-      <p>&copy; 2025 GeekStore. Todos os direitos reservados.</p>
-      <nav aria-label="Links do rodapé" class="mb-3">
-        <a href="index.html">Home</a> |
-        <a href="parcerias.html">Parcerias</a> |
-        <a href="camisetas.html">Camisetas</a> |
-        <a href="gamers.html">Gamers</a> |
-        <a href="acessorios.html">Acessórios</a>
-      </nav>
-      <p>Desenvolvido por Lucas</p>
-      <p class="mt-3 mb-1 text-uppercase fw-semibold" style="letter-spacing: 1.5px;">Siga-nos nas redes sociais</p>
-      <div class="social-icons d-flex justify-content-center" role="list">
-        <a href="https://www.instagram.com/lucaaasx._.b/" class="btn btn-link" role="listitem" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://twitter.com/" class="btn btn-link" role="listitem" aria-label="Twitter"><i class="bi bi-twitter"></i></a>
-        <a href="https://www.youtube.com/" class="btn btn-link" role="listitem" aria-label="YouTube"><i class="bi bi-youtube"></i></a>
-        <a href="https://www.tiktok.com/" class="btn btn-link" role="listitem" aria-label="TikTok"><i class="bi bi-tiktok"></i></a>
-      </div>
-    </div>
-  </footer>
+  <div id="footer"></div> 
+  <script>
+    fetch('footer.html')
+      .then(response => response.text())
+      .then(data => document.getElementById('footer').innerHTML = data)
+      .catch(error => console.error('Erro ao carregar o rodapé:', error));
+  </script>
 </body>
 
 </html>
