--- a/login_cadastro.html
+++ b/login_cadastro.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login / Cadastro</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css" />
   <style>
     body {
       min-height: 100vh;
@@ -14,187 +15,224 @@
       justify-content: center;
       align-items: center;
     }
+
     .card {
       border-radius: 20px;
     }
   </style>
 </head>
+
 <body>
-    <div id="menu"></div>
-    <script>
-      fetch('menu.html')
-        .then(response => response.text())
-        .then(data => {
-          document.getElementById('menu').innerHTML = data;
-        })
-        .catch(error => console.error('Erro ao carregar o menu:', error));
-    </script>
-    <div class="container mt-5 pt-5">
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-md-6 col-lg-5">
-      <div class="card shadow p-4">
-        <h3 class="text-center mb-4"><i class="bi bi-person-circle me-2"></i>Minha Conta</h3>
+  <div id="menu"></div>
+  <script>
+    fetch('menu.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('menu').innerHTML = data;
+      })
+      .catch(error => console.error('Erro ao carregar o menu:', error));
+  </script>
+  <div class="container mt-5 pt-5">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-6 col-lg-5">
+          <div class="card shadow p-4">
+            <h3 class="text-center mb-4"><i class="bi bi-person-circle me-2"></i>Minha Conta</h3>
 
-        <div id="message" class="alert d-none" role="alert"></div>
+            <div id="message" class="alert d-none" role="alert"></div>
 
-        <ul class="nav nav-tabs mb-3" id="tabMenu">
-          <li class="nav-item">
-            <a class="nav-link active" data-bs-toggle="tab" href="#loginTab">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" data-bs-toggle="tab" href="#registerTab">Cadastro</a>
-          </li>
-        </ul>
+            <ul class="nav nav-tabs mb-3" id="tabMenu">
+              <li class="nav-item">
+                <a class="nav-link active" data-bs-toggle="tab" href="#loginTab">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" data-bs-toggle="tab" href="#registerTab">Cadastro</a>
+              </li>
+            </ul>
 
-        <div class="tab-content">
-          <div class="tab-pane fade show active" id="loginTab">
-            <form id="loginForm">
-              <div class="mb-3">
-                <label for="loginEmail" class="form-label">Email</label>
-                <input type="email" class="form-control" id="loginEmail" required>
+            <div class="tab-content">
+              <div class="tab-pane fade show active" id="loginTab">
+                <form id="loginForm">
+                  <div class="mb-3">
+                    <label for="loginEmail" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="loginEmail" required>
+                  </div>
+                  <div class="mb-3">
+                    <label for="loginPassword" class="form-label">Senha</label>
+                    <input type="password" class="form-control" id="loginPassword" required>
+                  </div>
+                  <div class="form-check mb-3">
+                    <input class="form-check-input" type="checkbox" id="keepLogged">
+                    <label class="form-check-label" for="keepLogged">Manter conectado</label>
+                  </div>
+                  <button type="submit" class="btn btn-primary w-100"><i
+                      class="bi bi-box-arrow-in-right me-1"></i>Entrar</button>
+                </form>
               </div>
-              <div class="mb-3">
-                <label for="loginPassword" class="form-label">Senha</label>
-                <input type="password" class="form-control" id="loginPassword" required>
-              </div>
-              <div class="form-check mb-3">
-                <input class="form-check-input" type="checkbox" id="keepLogged">
-                <label class="form-check-label" for="keepLogged">Manter conectado</label>
-              </div>
-              <button type="submit" class="btn btn-primary w-100"><i class="bi bi-box-arrow-in-right me-1"></i>Entrar</button>
-            </form>
-          </div>
 
-          <div class="tab-pane fade" id="registerTab">
-            <form id="registerForm">
-              <div class="mb-3">
-                <label for="registerEmail" class="form-label">Email</label>
-                <input type="email" class="form-control" id="registerEmail" required>
+              <div class="tab-pane fade" id="registerTab">
+                <form id="registerForm">
+                  <div class="mb-3">
+                    <label for="registerEmail" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="registerEmail" required>
+                  </div>
+                  <div class="mb-3">
+                    <label for="registerPassword" class="form-label">Senha</label>
+                    <input type="password" class="form-control" id="registerPassword" required>
+                  </div>
+                  <div class="mb-3">
+                    <label for="confirmPassword" class="form-label">Confirmar Senha</label>
+                    <input type="password" class="form-control" id="confirmPassword" required>
+                  </div>
+                  <div class="mb-3">
+                    <label for="registerName" class="form-label">Nome Completo</label>
+                    <input type="text" class="form-control" id="registerName" required>
+                  </div>
+                  <div class="mb-3">
+                    <label for="registerPhone" class="form-label">Telefone</label>
+                    <input type="tel" class="form-control" id="registerPhone" required>
+                  </div>
+                  <div class="mb-3">
+                    <label for="registerAddress" class="form-label">Endereço</label>
+                    <input type="text" class="form-control" id="registerAddress" required>
+                  </div>
+                  <div class="mb-3">
+                    <label for="registerCity" class="form-label">Cidade</label>
+                    <input type="text" class="form-control" id="registerCity" required>
+                  </div>
+                  <div class="mb-3">
+                    <label for="registerState" class="form-label">Estado</label>
+                    <input type="text" class="form-control" id="registerState" required>
+                  </div>
+                  <div class="mb-3">
+                    <label for="registerZip" class="form-label">CEP</label>
+                    <input type="text" class="form-control" id="registerZip" required>
+                  </div>
+                  <div class="mb-3 form-check">
+                    <input class="form-check-input" type="checkbox" id="termsCheck" required>
+                    <label class="form-check-label" for="termsCheck">Concordo com os <a href="#">Termos de Serviço</a> e
+                      <a href="#">Política de Privacidade</a>
+                    </label>
+                  </div>
+                  <div class="mb-3 form-check">
+                    <button type="submit" class="btn btn-success w-100"><i
+                        class="bi bi-person-plus me-1"></i>Cadastrar</button>
+                </form>
               </div>
-              <div class="mb-3">
-                <label for="registerPassword" class="form-label">Senha</label>
-                <input type="password" class="form-control" id="registerPassword" required>
-              </div>
-              <div class="mb-3">
-                <label for="confirmPassword" class="form-label">Confirmar Senha</label>
-                <input type="password" class="form-control" id="confirmPassword" required>
-              </div>
-              <button type="submit" class="btn btn-success w-100"><i class="bi bi-person-plus me-1"></i>Cadastrar</button>
-            </form>
+            </div>
+
+            <div id="userArea" class="text-center mt-4 d-none">
+              <h5>Bem-vindo, <span id="userEmail"></span>!</h5>
+              <button class="btn btn-danger mt-2" onclick="logout()"><i
+                  class="bi bi-box-arrow-right me-1"></i>Logout</button>
+              <button class="btn btn-outline-danger mt-2" onclick="deleteAccount()"><i
+                  class="bi bi-trash me-1"></i>Excluir Conta</button>
+            </div>
           </div>
         </div>
-
-        <div id="userArea" class="text-center mt-4 d-none">
-          <h5>Bem-vindo, <span id="userEmail"></span>!</h5>
-          <button class="btn btn-danger mt-2" onclick="logout()"><i class="bi bi-box-arrow-right me-1"></i>Logout</button>
-          <button class="btn btn-outline-danger mt-2" onclick="deleteAccount()"><i class="bi bi-trash me-1"></i>Excluir Conta</button>
-        </div>
-
       </div>
     </div>
   </div>
-</div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-  const registerForm = document.getElementById("registerForm");
-  const loginForm = document.getElementById("loginForm");
-  const userArea = document.getElementById("userArea");
-  const userEmailSpan = document.getElementById("userEmail");
-  const messageBox = document.getElementById("message");
-  const keepLoggedCheckbox = document.getElementById("keepLogged");
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    const registerForm = document.getElementById("registerForm");
+    const loginForm = document.getElementById("loginForm");
+    const userArea = document.getElementById("userArea");
+    const userEmailSpan = document.getElementById("userEmail");
+    const messageBox = document.getElementById("message");
+    const keepLoggedCheckbox = document.getElementById("keepLogged");
 
-  const getUsers = () => JSON.parse(localStorage.getItem("users")) || [];
+    const getUsers = () => JSON.parse(localStorage.getItem("users")) || [];
 
-  const setUsers = (users) => localStorage.setItem("users", JSON.stringify(users));
+    const setUsers = (users) => localStorage.setItem("users", JSON.stringify(users));
 
-  const getCurrentUser = () => localStorage.getItem("loggedInUser");
+    const getCurrentUser = () => localStorage.getItem("loggedInUser");
 
-  const setCurrentUser = (email, keepLogged) => {
-    if (keepLogged) {
-      localStorage.setItem("loggedInUser", email);
-    } else {
-      sessionStorage.setItem("loggedInUser", email);
+    const setCurrentUser = (email, keepLogged) => {
+      if (keepLogged) {
+        localStorage.setItem("loggedInUser", email);
+      } else {
+        sessionStorage.setItem("loggedInUser", email);
+      }
+    };
+
+    const checkUserLogin = () => {
+      return localStorage.getItem("loggedInUser") || sessionStorage.getItem("loggedInUser");
+    };
+
+    window.onload = () => {
+      const logged = checkUserLogin();
+      if (logged) showUserArea(logged);
+    };
+
+    function showMessage(text, type = "success") {
+      messageBox.textContent = text;
+      messageBox.className = `alert alert-${type}`;
+      messageBox.classList.remove("d-none");
+      setTimeout(() => messageBox.classList.add("d-none"), 4000);
     }
-  };
 
-  const checkUserLogin = () => {
-    return localStorage.getItem("loggedInUser") || sessionStorage.getItem("loggedInUser");
-  };
+    registerForm.addEventListener("submit", function (e) {
+      e.preventDefault();
+      const email = document.getElementById("registerEmail").value.trim();
+      const password = document.getElementById("registerPassword").value;
+      const confirm = document.getElementById("confirmPassword").value;
 
-  window.onload = () => {
-    const logged = checkUserLogin();
-    if (logged) showUserArea(logged);
-  };
+      if (!email.includes("@") || !email.includes(".")) return showMessage("Email inválido.", "danger");
+      if (password.length < 6) return showMessage("A senha deve ter pelo menos 6 caracteres.", "danger");
+      if (password !== confirm) return showMessage("As senhas não coincidem.", "danger");
 
-  function showMessage(text, type = "success") {
-    messageBox.textContent = text;
-    messageBox.className = `alert alert-${type}`;
-    messageBox.classList.remove("d-none");
-    setTimeout(() => messageBox.classList.add("d-none"), 4000);
-  }
+      let users = getUsers();
+      if (users.find(u => u.email === email)) return showMessage("Esse email já está cadastrado.", "danger");
 
-  registerForm.addEventListener("submit", function (e) {
-    e.preventDefault();
-    const email = document.getElementById("registerEmail").value.trim();
-    const password = document.getElementById("registerPassword").value;
-    const confirm = document.getElementById("confirmPassword").value;
+      users.push({ email, password });
+      setUsers(users);
+      showMessage("Cadastro realizado com sucesso!", "success");
+      registerForm.reset();
+    });
 
-    if (!email.includes("@") || !email.includes(".")) return showMessage("Email inválido.", "danger");
-    if (password.length < 6) return showMessage("A senha deve ter pelo menos 6 caracteres.", "danger");
-    if (password !== confirm) return showMessage("As senhas não coincidem.", "danger");
+    loginForm.addEventListener("submit", function (e) {
+      e.preventDefault();
+      const email = document.getElementById("loginEmail").value.trim();
+      const password = document.getElementById("loginPassword").value;
+      const keepLogged = keepLoggedCheckbox.checked;
 
-    let users = getUsers();
-    if (users.find(u => u.email === email)) return showMessage("Esse email já está cadastrado.", "danger");
+      const users = getUsers();
+      const user = users.find(u => u.email === email && u.password === password);
+      if (user) {
+        setCurrentUser(email, keepLogged);
+        showUserArea(email);
+        loginForm.reset();
+      } else {
+        showMessage("Email ou senha inválidos.", "danger");
+      }
+    });
 
-    users.push({ email, password });
-    setUsers(users);
-    showMessage("Cadastro realizado com sucesso!", "success");
-    registerForm.reset();
-  });
-
-  loginForm.addEventListener("submit", function (e) {
-    e.preventDefault();
-    const email = document.getElementById("loginEmail").value.trim();
-    const password = document.getElementById("loginPassword").value;
-    const keepLogged = keepLoggedCheckbox.checked;
-
-    const users = getUsers();
-    const user = users.find(u => u.email === email && u.password === password);
-    if (user) {
-      setCurrentUser(email, keepLogged);
-      showUserArea(email);
-      loginForm.reset();
-    } else {
-      showMessage("Email ou senha inválidos.", "danger");
+    function showUserArea(email) {
+      document.querySelector(".tab-content").classList.add("d-none");
+      document.getElementById("tabMenu").classList.add("d-none");
+      userArea.classList.remove("d-none");
+      userEmailSpan.textContent = email;
     }
-  });
 
-  function showUserArea(email) {
-    document.querySelector(".tab-content").classList.add("d-none");
-    document.getElementById("tabMenu").classList.add("d-none");
-    userArea.classList.remove("d-none");
-    userEmailSpan.textContent = email;
-  }
+    function logout() {
+      localStorage.removeItem("loggedInUser");
+      sessionStorage.removeItem("loggedInUser");
+      location.reload();
+    }
 
-  function logout() {
-    localStorage.removeItem("loggedInUser");
-    sessionStorage.removeItem("loggedInUser");
-    location.reload();
-  }
+    function deleteAccount() {
+      const confirmDelete = confirm("Tem certeza que deseja excluir sua conta?");
+      if (!confirmDelete) return;
 
-  function deleteAccount() {
-    const confirmDelete = confirm("Tem certeza que deseja excluir sua conta?");
-    if (!confirmDelete) return;
+      const email = checkUserLogin();
+      let users = getUsers().filter(u => u.email !== email);
+      setUsers(users);
+      logout();
+    }
 
-    const email = checkUserLogin();
-    let users = getUsers().filter(u => u.email !== email);
-    setUsers(users);
-    logout();
-  }
-
-</script>
+  </script>
 </body>
 
 </html>
