--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm">
     <div class="container">
-        <a class="navbar-brand fw-bold fs-3" href="index.html">GeekStore</a>
+        <a class="navbar-brand" href="index.html">
+            <img src="Imagens/Logo da Geeek Store.png" alt="Bootstrap" width="30" height="24">
+          </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
             aria-controls="navbarContent" aria-expanded="false" aria-label="Alternar navegação">
             <span class="navbar-toggler-icon"></span>
